task1-hardening/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-api
  namespace: ledger
spec:
  selector:
    app: ledger-api
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification-svc
  namespace: ledger
spec:
  selector:
    app: notification-svc
  ports:
    - port: 80
      targetPort: 8081
